<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WAP Madrid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">Email</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena2">Repita la contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrate">¿Aun no tienes usuario?\n ¡Registrate!</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="conCuenta">¿Ya tienes cuenta? Pulsa aquí</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_home">Cargando Datos...</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="title_activity_map_fragment">MapaFragment</string>
    <string name="title_activity_rutas_fragment">RutasFragment</string>
    <string name="title_activity_rutasList_fragment">RutasListFragment</string>
    <string name="title_activity_centro_medico_fragment">CentroSaludFragment</string>
    <string name="title_activity_crear_ruta">Crear Ruta</string>
    <string name="title_activity_ceder_capitania">Ceder Capitania</string>
    <string name="title_activity_comenzar_ruta">Comenzar Ruta</string>
    <string name="title_activity_mensajes_capitan">Mensajes</string>
    <string name="title_activity_peticiones">Peticiones de Amistad</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="terminarRuta">Terminar Ruta</string>

    <string name="connection_error">"Ha ocurrido un error al contactar con los servicios de WAP. Vuelve a intentarlo en unos minutos"</string>

    <string-array name="drawer_options">
        <item>Inicio</item>
        <item>Rutas</item>
        <item>Centro de Salud</item>
        <item>Perfil</item>
        <item>Grupos</item>
        <item>Capitán</item>
        <item>Enlaces</item>
    </string-array>
    <string-array name="grupo_tabs">
        <item>Información</item>
        <item>Ruta</item>
        <item>Miembros</item>
        <item>Mensajes</item>
    </string-array>
    <string-array name="perfil_tabs">
        <item>Información</item>
        <item>Estado</item>
        <item>Dieta</item>
        <item>Actividad</item>
    </string-array>
    <string-array name="capitan_tabs">
        <item>Información</item>
        <item>Ruta</item>
        <item>Miembros</item>
        <item>Mensajes</item>
    </string-array>
    <string-array name="rutasListTab">
        <item>Mapa</item>
        <item>Lista</item>
    </string-array>
    <string-array name="ruta_tabs">
        <item>Descripción</item>
        <item>Mapa</item>
    </string-array>
    <string-array name="amigo_tabs">
        <item>Información</item>
        <item>Actividad</item>
    </string-array>

    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_edit_profile">Editar Perfil</string>
    <string name="title_activity_gupo">GupoActivity</string>


    <string-array name="smoker_array">
        <item>No</item>
        <item>Si</item>
    </string-array>

    <string-array name="alcohol_array">
        <item>No</item>
        <item>Moderadamente</item>
        <item>Con Frecuencia</item>
    </string-array>

    <string name="altura">Altura: %1$s m</string>
    <string name="peso">Peso: %1$s kg</string>
    <string name="fumador">Fumador: %1$s</string>
    <string name="alcohol">Consumo de alcohol: %1$s</string>
    <string name="imc">IMC</string>
    <string name="nuevoCuestionario">Nuevo cuestionario</string>
    <string name="title_activity_cuestionario">Nuevo Cuestionario</string>
    <string name="medidaDieta">Entre 11 y 14 puntos, excelente adherencia a la dieta mediterránea\nEntre 8 y 10, buena adherencia a la dieta mediterránea\nEntre 5 y 7,  baja adherencia a la dieta mediterránea\nMenos de 5, muy baja adherencia a la dieta mediterránea </string>
    <string name="medidaIMC">Normopeso: IMC 18,5 - 24,9 Kg/m2\nSobrepeso: IMC 25 -29,9 Kg/m2\nObesidad grado I con IMC 30-34,9 Kg/m2\nObesidad grado II con IMC 35-39,9 Kg/m2\nObesidad grado III con IMC >= 40 Kg/m2</string>
    <string-array name="cuestionario_preguntas">
        <item>¿Usa usted el aceite de oliva como principal grasa para cocinar?</item>
        <item>¿Cuánto aceite de oliva consume en total al día (incluyendo el usado para freír, comidas fuera de casa, ensaladas, etc...)?</item>
        <item>¿Cuántas verduras y hortalizas consume al día? (1 ración 200g)</item>
        <item>¿Cuántas piezas de fruta consume al día? (Incluyendo zumo natural)</item>
        <item>¿Cuántas raciones de carnes rojas, hamburguesas, salchichas o embutidos consume al día? (1 ración 100/150g)</item>
        <item>¿Cuántas raciones de mantequilla, margarina o nata consume al día? (Porción individual 12g)</item>
        <item>¿Cuántas bebidas carbonadas y/o azucaradas (refrescos, colas, bitter) consume al día?</item>
        <item>¿Bebe usted vino? ¿Cuánto consume a la semana?</item>
        <item>¿Cuántas raciones de legumbres consume a la semana? (1 plato ración de 150g)</item>
        <item>¿Cuántas raciones de  pescado-mariscos consume a la semana? (1 ración de pescado 150g, 1 ración de marisco 200g)</item>
        <item>¿Cuántas veces consume repostería comercial (no casera) como galletas, flanes, dulce o pasteles a la semana?</item>
        <item>¿Cuántas veces consume frutos secos a la semana? (1 ración 30g)</item>
        <item>¿Consume usted preferentemente carne de pollo, pavo o conejo en vez de ternera, cerdo, hamburguesas o salchichas?</item>
        <item>¿Cuántas veces a la semana consume los vegetales cocinados, la pasta, arroz u otros platos aderezados con salsa de tomate, ajo, cebolla o puerro elaborado a fuego lento con aceite de oliva (sofrito)?</item>
    </string-array>

    <string-array name="cuestionario_respuestas0">
        <item>No</item>
        <item>Tres o menos cucharadas</item>
        <item>Una o menos</item>
        <item>Dos o menos al día</item>
        <item>Uno o más al día</item>
        <item>Una o más al día</item>
        <item>Una o más al día</item>
        <item>Seis o menos vasos a la semana</item>
        <item>Dos o menos a la semana</item>
        <item>Dos o menos a la semana</item>
        <item>Dos o más a la semana</item>
        <item>Tres o más a la semana</item>
        <item>No</item>
        <item>Menos de dos a la semana</item>
    </string-array>

    <string-array name="cuestionario_respuestas1">
        <item>Si</item>
        <item>Cuatro o más cucharadas</item>
        <item>Dos o más</item>
        <item>Tres o más al día</item>
        <item>Menos de uno al día</item>
        <item>Menos de una al día</item>
        <item>Menos de una al día</item>
        <item>Siete o más vasos a la semana</item>
        <item>Tres o más a la semana</item>
        <item>Tres o más a la semana</item>
        <item>Menos de dos a la semana</item>
        <item>Menos de tres a la semana</item>
        <item>Si</item>
        <item>Dos o más a la semana</item>
    </string-array>
    <string name="title_activity_edit_info">Editar Información</string>
    <string name="title_activity_edit_status">Editar Estado</string>
    <string name="telephone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string name="nombreGrupo">Nombre del grupo</string>
    <string name="horarioHint">Horario: Ej. L-X-V 16:00</string>
    <string name="nivelHint">Nivel de esfuerzo de 1 a 5</string>
    <string name="selectRoute">Selecciona la ruta</string>
    <string name="title_activity_routes_list">Listado de rutas</string>
    <string name="emailCapitan">Email: %1$s</string>
    <string name="captainName">Capitán: %1$s</string>
    <string name="routeName">Ruta: %1$s</string>
    <string name="nivelGrupo">Nivel: %1$s</string>
    <string name="nombreRuta">Nombre de la ruta</string>
    <string name="title_activity_route">Ruta</string>
    <string name="title_activity_cmslist">CMS</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="abandonarGrupo">Abandonar Grupo</string>
    <string name="txtSelectCMS">Seleciona tu Centro de Madrid Salud</string>
    <string name="empezarRuta">Empezar Ruta</string>
    <string name="terminarEjercicio">Terminar Ruta</string>
    <string name="title_activity_captain_select_members">Seleciona los miembros que han
        participado
    </string>
    <string name="aceptar">Aceptar</string>
    <string name="fill_fields">Por favor rellena todos los campos</string>
    <string name="diario">Por días</string>
    <string name="mensual">Por meses</string>
    <string name="anual">Por años</string>
    <string name="seleccionar">Seleccionar Miembros</string>
    <string name="enlace_wap">www.wapmadrid.madridsalud.es</string>
    <string name="enlace_madridSalud">www.madridsalud.es</string>


</resources>
