<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_gravity="center_horizontal"
            android:text="@string/altura"
            android:id="@+id/txtAltura" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_gravity="center_horizontal"
            android:text="@string/peso"
            android:id="@+id/txtPeso" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_gravity="center_horizontal"
            android:text="@string/fumador"
            android:id="@+id/txtFumador" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_gravity="center_horizontal"
            android:text="@string/alcohol"
            android:id="@+id/txtAlcohol" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chartIMC"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</ScrollView>