<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.wapmadrid.activities.NewGroupActivity"
    android:id="@+id/lyNewGroup">

    <EditText
        style="@style/EditText.Orange"
        android:id="@+id/etNombreGrupo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreGrupo"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        style="@style/EditText.Orange"
        android:id="@+id/etHorario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/horarioHint"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        style="@style/EditText.Orange"
        android:id="@+id/etNivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nivelHint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/EditText.Orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/selectRoute"
            android:id="@+id/tvRoute"
            android:layout_gravity="center_horizontal"     />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_edit"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>



    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegistroContrasena2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        style="@style/TextView.Black"
        android:textSize="18sp"
        android:background="@drawable/button_enter"
        android:text="@string/entrar" />

</LinearLayout>
