<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.wapmadrid.fragments.HomeFragment">

        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/chartEjercicio"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/btnDias"
            style="@style/TextView.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_enter"
            android:text="@string/diario"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnMeses"
            style="@style/TextView.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_enter"
            android:text="@string/mensual"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAnio"
            style="@style/TextView.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_enter"
            android:text="@string/anual"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>